Fix content-box overflows for firestarter

--- a/plugins/firestarter/assets/firestarter/css/style.styl
+++ b/plugins/firestarter/assets/firestarter/css/style.styl
@@ -23,7 +23,8 @@
     padding: 0.5em
   .response
     padding: 0.5em
-    white-space: pre-wrap
+    overflow: auto
+    word-wrap: break-word
   &:hover
     .foot .delete, .foot .edit
       visibility: visible
